# tes-project

./: .replit  pyproject.toml
telegram-bot/: .env.example  Dockerfile  README.md  bot.py  config.py  docker-compose.yml  requirements.txt  setup.sh
telegram-bot/data/: user_tokens.json
telegram-bot/handlers/: actions_handlers.py  ai_handlers.py  codespace_handlers.py  extra_handlers.py  git_handlers.py  github_handlers.py  issues_handlers.py  terminal_handlers.py
telegram-bot/utils/: auth.py  helpers.py
