[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "aiofiles==23.2.1",
    "aiohttp==3.9.1",
    "httpx==0.25.2",
    "pygithub==2.1.1",
    "python-dotenv==1.0.0",
    "python-telegram-bot==20.7",
    "requests==2.31.0",
]
